--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   provider: ^6.1.2
+  firebase_core: ^2.32.0
+  cloud_firestore: ^4.17.5
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
